# proof-editor

./: .gitignore  .gitmodules  .merlin  .project  Makefile  MathEdHaskell  README  README.md  abbrevs.txt  build.sbt  cmathml.ml  cmathml.mli  idea  installing.txt  notes.txt  proof-editor-gui.cabal  runmake.bat  sbt  sources.txt  symbols.ods  test.py  theory-quadeq.xml
frontend/: DOMHelpers.hs  Main.hs  MathQuill.hs
haskell/: .project  MathEdHaskell.cabal  proof-editor.lkshw
haskell/gui/: Makefile  proof-editor-gui.cabal  stack.yaml
haskell/gui/html/: Makefile  index.html  misc.css  misc.js
haskell/gui/src/: DOMHelpers.hs  Main.hs  MathQuill.hs  PMML2Openmath.hs  ParseMathQuillLatex.hs
haskell/src/: FFIExports.hs  Main.hs  Misc.hs  Test.hs  UserError.hs
haskell/src/Cmathml/: TeX.hs  Types.hs  Utils.hs  Xml.hs
haskell/src/OpenDoc/: ODS.hs
haskell/src/Openmath/: Cmathml.hs  Pmathml.hs  PmathmlTest.hs  Popcorn.hs  TeX.hs  Types.hs  TypesTest.hs  Utils.hs
haskell/src/Transformations/: Associativity.hs  Common.hs  Commutativity.hs  Compute.hs  ModusPonens.hs  SMT.hs  Substitution.hs
haskell/src/UserError/: Renderer.hs  UserError.hs  UserErrorTest.hs
haskell/test/: Test.hs  UserErrorTest.hs  usererror.xml
haskell/test/Cmathml/: QuickCheck.hs  TeXTest.hs  TypesTest.hs  UtilsTest.hs  XmlTest.hs
haskell/test/OpenDoc/: ODSTest.hs  test.ods
haskell/test/Openmath/: CmathmlTest.hs  QuickCheck.hs  TeXTest.hs  TypesTest.hs  UtilsTest.hs
haskell/test/Transformations/: CommutativityTest.hs  ComputeTest.hs
html/: index.html  proof-editor
old/: Zipper.hs  ZipperTest.hs  e  installing.txt  math-eq.e4p  openmath.py
old/.eric6project/: math-eq.e4q  math-eq.e4t
old/.ropeproject/: config.py
old/haskell/: proof-editor.lkshw
old/haskell/test/: FFIExportsTest.hs  Test.hs
old/haskell/test/Openmath/: CmathmlTest.hs  QuickCheck.hs
old/haskell/test/UserError/: UserErrorTest.hs
old/resources/: mathpicture.css  mathview.css
old/resources/errors/: error.css
old/scripts/: find-haskell-lib.py  user-errors.py
old/src/: utils.py
old/src/graph/: Ui_controls.pyi  graphview.py
old/src/haskell/: ffi.py
old/src/mathview/: __init__.py  mathviewplugin.py  tests.py
old/src/testui/: Ui_mainwin.pyi  mainwin.py
old/src/transform/: __init__.py
project/: Build.scala  Downloads.scala  FindInPath.scala  plugins.sbt
resources/: mathview.css  mathview.html  mathview.js  mathviewmq.js  svg_convert.html  symbols.ods  test.html  testapp.css
resources/errors/: erroredit.css  ueCommutativityNotCommutative.xhtml
resources/isabelle/: ProofEditorSupport.thy  ProofEditorSupportOps.thy  ROOT  ROOTS
resources/isabelle/old/: ROOTS
scripts/: create-all.py  haskell-ffi.py  haskell-tests.py  mypy-stubs.py  pyqt-mypy2.py  setup.bat  setup.py
shared/: PMML2Openmath.hs
shared/Openmath/: Utils.hs
src/: App.java  CMathML.scala  MathView.scala  Pure.scala  TempMacro.scala  TestApp.scala  Utils.scala  logging_conf.py  main.py  utils.py  xxx.txt
src/cmathml/: CMathML.scala  Logic.scala  MutableCMathML.scala  PopcornGrammar.g4  PopcornGrammar.scala
src/cmathml/dom/: CMathMLDOMImplementation.scala  CMathMLDocument.scala  CMathMLElement.scala
src/graph/: controls.ui  graphview.py  graphviewplugin.py
src/haskell/: __init__.py
src/isabelle/: Isabelle.scala
src/main/antlr4/: MQLatex.g4
src/main/scala/mathview/: MQLatex.scala  MathViewMQ.scala
src/main/scala/misc/: MathView.scala  Pure.scala
src/mathview/: MQLatex.g4  MQLatex.scala  MathView.scala  MathViewMQ.scala  __init__.py  mathview.css  mathview.html  mathview.js  widgets.py
src/misc/: CMathML.scala  Log.scala  MathView.scala  Pure.scala  TestApp.scala  Utils.scala  testapp.fxml
src/relation/: Relation.scala
src/testapp/: TestApp.scala  testapp.css  testapp.fxml
src/testui/: mainwin.py  mainwin.ui
src/theory/: CaseDistinctionCoverage.scala  MutableTheory.scala  Theory.scala
src/trafo/: CaseDistinction.scala  CheckEqualTrafo.scala  CopyTrafo.scala  EditFormulaTrafo.scala  Interaction.scala  ModusPonensTrafo.scala  SimplifyTrafo.scala  SubstitutionTrafo.scala  SubtermTrafo.scala  Transformation.scala  TrivialTrafo.scala
src/transform/: __init__.py
src/ui/: ConnectingLine.scala  FilteredListView.scala  HTMLLabel.scala  Interactor.scala  MathViewBatik.scala  TheoryView.scala
src/ui/mathview/: App.scala  DefaultMathRendererFactory.scala  MQLatex.g4  MQLatex.scala  MathEdit.scala  MathView.scala  MathViewFX.scala  MathViewFXExample.scala  mathview.html
src/z3/: Z3.scala
test/: ObjId.scala  Temp.scala
test/cmathml/: CMathMLTest.scala  LogicTest.scala  MutableCMathMLTest.scala
test/isabelle/: IsabelleTest.scala
test/misc/: UtilsTest.scala
test/test/: UnitSpec.scala
test/trafo/: InteractionTest.scala  TransformationTest.scala
test/tryouts/: Batik.scala  ClipAttack.scala  HTMLLabel.scala  IsabelleX.scala  MonadicNeedsCast.scala  Y.java
test/ui/: InteractorExample.scala  TestFxApp.scala
test/ui/mathview/: MQLatexTest.scala  MathViewFXExample.scala  MathViewTest.scala
test/z3/: Z3Test.scala
tosort/: FFIExports.hs  FFIHelpers.hs  Main.hs  Misc.hs
tosort/Openmath/: Cmathml.hs
tosort/Transformations/: Associativity.hs  Substitution.hs
tosort/UserError/: ErrorDB.hs  usererrortest.xml
