name:           MathEdHaskell
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Dominique Unruh

executable MathEdHaskell
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   bytestring,
                   texmath, xml-conduit,
                   xml, split, parsec,
                   mtl, zip-archive,
                   xml-types, text
  ghc-options:     -Wall
  other-modules:   

test-suite Test
  type:            exitcode-stdio-1.0
  main-is:         Test.hs
  ghc-options:     -Wall -rtsopts
  build-depends:   
                   base >= 4,
                   HTF > 0.9,
                   QuickCheck,
                   xml-types,
                   text
  other-modules:   
  hs-source-dirs:  
                  test,
                  src

