name: MathEdHaskell
version: 0.1
cabal-version: >=1.8
build-type: Simple
license: OtherLicense
author: Dominique Unruh

executable MathEdHaskell
    main-is: Main.hs
    build-depends:
        HTF >0.9,
        QuickCheck -any,
        base >=4,
        bytestring -any,
        containers -any,
        json -any,
        mtl -any,
        parsec -any,
        split -any,
        text -any,
        xml -any,
        xml-conduit -any,
        xml-types -any,
        zip-archive -any,
        filepath -any
    hs-source-dirs: src
    other-modules:
        Misc
        Openmath.Pmathml
        UserError.ErrorDB
        UserError.UserError
        Openmath.Utils
        Openmath.Cmathml
        Openmath.TeX
        Openmath.Types
        OpenDoc.ODS
        Transformations.Associativity
        Transformations.Common
        Transformations.Commutativity
        Transformations.ModusPonens
        Transformations.Substitution
        Transformations.Compute
    ghc-options: -Wall

test-suite Test
    type: exitcode-stdio-1.0
    main-is: Test.hs
    build-depends:
        HTF >0.9,
        QuickCheck -any,
        base >=4,
        bytestring -any,
        containers -any,
        json -any,
        mtl -any,
        parsec -any,
        split -any,
        text -any,
        xml -any,
        xml-conduit -any,
        xml-types -any,
        zip-archive -any,
        filepath >=1.4.0.0 && <1.5
    hs-source-dirs: src
    other-modules:
        Misc
        Openmath.Pmathml
        Openmath.PmathmlTest
        UserError.ErrorDB
        UserError.UserErrorTest
        Openmath.TypesTest
        Openmath.CmathmlTest
        Openmath.QuickCheck
        Openmath.UtilsTest
        Openmath.TeXTest
        OpenDoc.ODSTest
        Transformations.CommutativityTest
        Transformations.ComputeTest
        UserError.UserError
        Openmath.Utils
        Openmath.Cmathml
        Openmath.TeX
        Openmath.Types
        OpenDoc.ODS
        Transformations.Associativity
        Transformations.Common
        Transformations.Commutativity
        Transformations.ModusPonens
        Transformations.Substitution
        Transformations.Compute
    ghc-options: -Wall -rtsopts
