name: MathEdHaskell
version: 0.1
cabal-version: >=1.8
build-type: Simple
license: OtherLicense
author: Dominique Unruh
tested-with: GHC ==7.10.2

library
    exposed-modules:
        FFIExports
        Misc
        OpenDoc.ODS
        Openmath.Cmathml
        Openmath.Pmathml
        Openmath.TeX
        Openmath.Types
        Openmath.Utils
        Transformations.Associativity
        Transformations.Common
        Transformations.Commutativity
        Transformations.Compute
        Transformations.ModusPonens
        Transformations.Substitution
        UserError.ErrorDB
        UserError.Renderer
        UserError.UserError
    build-depends:
        HTF >0.9,
        QuickCheck -any,
        base >=4,
        bytestring -any,
        containers -any,
        filepath -any,
        json -any,
        mtl -any,
        parsec -any,
        split -any,
        template-haskell -any,
        text -any,
        xml -any,
        xml-conduit -any,
        xml-types -any,
        zip-archive -any,
        simple-smt >=0.6.0 && <0.7,
        doctest >=0.10.1 && <0.11
    extra-libraries:
        HSrts-ghc7.10.2
    hs-source-dirs: src
    other-modules:
        FFIHelpers
        Transformations.SMT
    ghc-options: -Wall -rtsopts -ddump-splices -ddump-to-file

test-suite Test
    type: exitcode-stdio-1.0
    main-is: Test.hs
    build-depends:
        HTF >0.9,
        QuickCheck -any,
        base >=4,
        bytestring -any,
        containers -any,
        filepath -any,
        json -any,
        mtl -any,
        parsec -any,
        split -any,
        template-haskell -any,
        text -any,
        xml -any,
        xml-conduit -any,
        xml-types -any,
        zip-archive -any,
        MathEdHaskell -any,
        simple-smt >=0.6.0 && <0.7,
        doctest >=0.10.1 && <0.11
    hs-source-dirs: test
    other-modules:
        FFIExportsTest
        Openmath.TypesTest
        Openmath.CmathmlTest
        Openmath.QuickCheck
        Openmath.UtilsTest
        Openmath.TeXTest
        Openmath.PmathmlTest
        OpenDoc.ODSTest
        UserError.UserErrorTest
        Transformations.CommutativityTest
        Transformations.ComputeTest
    ghc-options: -Wall -rtsopts -ddump-splices -ddump-to-file
